--- a/project.html
+++ b/project.html
@@ -109,7 +109,7 @@
       <div id="toDo" class="header">
         <h2>Список "помидор"</h2>
         <input type="text" id="myInput" placeholder="Задача">
-        <span onclick="newElement()" class="addBtn">Добавить</span>
+        <span id="addBtn" class="addBtn">Добавить</span>
       </div>
 
       <ul id="myUL">
