--- a/project.html
+++ b/project.html
@@ -113,10 +113,10 @@
       </div>
 
       <ul id="myUL">
-        <li>Прочитать учебную литературу</li>
+        <!-- <li>Прочитать учебную литературу</li>
         <li class="checked">Пересчитать затраты на ремонт</li>
         <li>Пробежка вдоль канала</li>
-        <li>Поработать над проектом</li>
+        <li>Поработать над проектом</li> -->
       </ul>
     </div>
     <canvas id="myChart"></canvas>
